--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "micromodal": "^0.4.2",
+    "node-sass": "^4.13.0",
     "react": "^16.10.1",
-    "react-dnd": "^9.4.0",
-    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
-    "react-simple-flowchart": "^1.2.2",
+    "react-smooth-dnd": "^0.11.1",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
