--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "micromodal": "^0.4.2",
     "node-sass": "^4.13.0",
@@ -12,7 +11,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "react-smooth-dnd": "^0.11.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "restful-react": "^9.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
